# nekrasovp.github.io

./: .gitattributes  .gitignore  404.html  BUILDING.md  CNAME  Makefile  add-theme-and-plugins-to-pelican.html  ai-native-delivery-contract.html  ai-native-sdlc-engineering-accountability.html  analytics-checklist.html  arbitrage.html  archives.html  authors.html  building-job-queue.html  business-it-solutions.html  candlestick-charts-plotly.html  categories.html  color-formatter.html  covid-dashboard.html  custom-logger.html  deploying-a-static-website-to-bitbucket.html  devops-questions.html  essay-paper-template.html  feature-engineering-on-ohlcv-candles-wit-xgboost.html  fixing-caching-sha2-password.html  git-rebase.html  graphql-schema.html  index.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  install-nvm-node-yarn.html  install-pelican-and-create-project-skeleton.html  linux-change-swap-size.html  linux-list-users.html  linux-port.html  logistics-distributed-systems-case-study.html  (+38 more)
about/: index.html
assets/: site.css
author/: nekrasov-pavel.html  nekrasov-pavel2.html  nekrasov-pavel3.html  nekrasov-pavel4.html  nekrasov-pavel5.html  nekrasov-pavel6.html  nekrasov-pavel7.html
category/: blog.html  blog2.html  blog3.html  blog4.html  blog5.html  blog6.html  blog7.html
content/: CNAME  Getting-stock-data-with-pandas-datareader.ipynb  Getting-stock-data-with-pandas-datareader.nbdata  Number-sequences.ipynb  Number-sequences.nbdata  Retrospective-template.md  Stock-market-portfolio-optimisation.nbdata  analytics-checklist.md  (+59 more)
(+241 files in other folders)
